--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,14 @@ dependencies:
   cloud_firestore: ^4.14.0
   flutter:
     sdk: flutter
+  firebase_core: ^2.30.0
+  intl: ^0.18.1
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  table_calendar: ^3.1.1
 
 flutter:
   uses-material-design: true
